docs: products endpoint openapi docs
